transform scss files for footer, header, feedback

--- a/src/blocks/single-airdatepicker/single-airdatepicker.pug
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.pug
@@ -1,7 +1,7 @@
 mixin single-datepicker()
-    div.single-datepicker
+    div(class='single-datepicker')
         input(type='text'
             data-range='true'
             data-multiple-dates-separator=' - '
             placeholder='ДД.ММ.ГГГГ'
-            id ='single__input__range')
+            id='single-range')
