--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -1,4 +1,4 @@
-.wrap {
+.signup {
   width: 560px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -6,84 +6,134 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   margin: 0 auto;
+  &__container {
+    padding: 33px 30px 40px 40px;
+  }
+  &__title {
+    padding-bottom: 7px;
+  }
+  &__radio-buttons {
+    margin: 19px 0 25px 0;
+    &_woman {
+      margin-left: 30px;
+    }
+  }
+  &__input {
+    &_name {
+      padding-top: 5px;
+    }
+    &_surname {
+      padding-top: 15px;
+    }
+    &_birthday {
+      padding-top: 5px;
+    }
+    &_data {
+      padding-top: 30px;
+      &_password {
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+    }
+  }
+  &__text {
+    margin-top: 20px;
+    font-size: 19px;
+    margin-right: 60px;
+  }
+  &__offer {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
+    margin-left: 15px;
+  }
+  &__button_payment {
+    margin-top: 35px;
+    margin-bottom: 50px;
+  }
 }
 
-.container-form {
-  padding: 33px 30px 40px 40px;
-}
+// .signup__input
 
-.signup__input_name {
-  padding-top: 5px;
-}
+// .signup__input_surname {
+//   padding-top: 15px;
+// }
 
-.signup__input_surname {
-  padding-top: 15px;
-}
+// .signup__radio-buttons {
+//   margin: 19px 0 25px 0;
+// }
 
-.signup__radio-buttons {
-  margin: 19px 0 25px 0;
-}
+// .signup__radio-buttons_woman {
+//   margin-left: 30px;
+// }
 
-.signup__radio-buttons_woman {
-  margin-left: 30px;
-}
+// .signup__title {
+//   padding-bottom: 7px;
+// }
 
-.signup__title {
-  padding-bottom: 7px;
-}
+// .signup__input_birthday {
+//   padding-top: 5px;
+// }
 
-.signup__input_birthday {
-  padding-top: 5px;
-}
+// .signup__input_data {
+//   padding-top: 30px;
+// }
 
-.signup__input_data {
-  padding-top: 30px;
-}
+// .signup__input_data_password {
+//   padding-top: 15px;
+//   padding-bottom: 15px;
+// }
 
-.signup__input_data_password {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+// .signup__button_payment {
+//   margin-top: 35px;
+//   margin-bottom: 50px;
+// }
 
-.signup__button_payment {
-  margin-top: 35px;
-  margin-bottom: 50px;
-}
+// .sugnup__text {
+//   margin-top: 20px;
+//   font-size: 19px;
+//   margin-right: 60px;
+// }
 
-.sugnup__text {
-  margin-top: 20px;
-  font-size: 19px;
-  margin-right: 60px;
-}
-
-.signup__offer {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(31, 32, 65, 0.75);
-  margin-left: 15px;
-}
+// .signup__offer {
+//   font-family: Montserrat;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 20px;
+//   line-height: 24px;
+//   color: rgba(31, 32, 65, 0.75);
+//   margin-left: 15px;
+// }
 
 @media only screen and (max-width: 600px) {
-  .container-form {
-    padding: 15px 5px;
+  .signup {
+    &__container {
+      padding: 15px 5px;
+    }
+    &__text {
+      margin: 0 auto;
+      margin-top: 20px;
+    }
   }
-
-  .sugnup-text {
-    margin: 0 auto;
-    margin-top: 20px;
-  }
+  // .sugnup-text {
+  //   margin: 0 auto;
+  //   margin-top: 20px;
+  // }
 }
 
 @media only screen and (max-width: 400px) {
-  .container-form {
-    padding: 15px 5px;
+  .signup {
+    &__container {
+      padding: 15px 5px;
+    }
+    &__text {
+      margin: 0 auto;
+      margin-top: 20px;
+    }
   }
 
-  .sugnup-text {
-    margin: 0 auto;
-    margin-top: 20px;
-  }
+  // .sugnup
 }
