--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -2,13 +2,13 @@ include ../../blocks/dropdown/dropdown.pug
 include ../../blocks/airdatepicker/airdatepicker.pug
 
 mixin form-search(title, subtitle, text)
-  .form-search
-      .form-search__container
+  div(class='form-search')
+    div(class='form-search__container')
         h1(class='title-main form-search__title')= title
-        .row
+        div(class='row')
           h3(class='title form-search__title_checkin')= subtitle.checkin
           h3(class='title form-search__title_checkout')= subtitle.checkout
-        div(class='form-search__dropdown')
+        div(class='form-search__datepicker')
           +datepicker()
         h3(class='title form-search__title_guests')= subtitle.guests
         div(class='form-search__dropdown')
