--- a/src/pages/search-page/search-page.pug
+++ b/src/pages/search-page/search-page.pug
@@ -6,6 +6,7 @@ doctype html
 html
   head
     title
+    meta(name="viewport", content="width=, initial-scale=1.0")
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
       +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
