--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,7 +34,7 @@ p {
 }
 
 .logo {
-  background-image: url(../images/Logo.svg);
+  background-image: url(../images/logo.svg);
   background-repeat: no-repeat;
   width: 210px;
   height: 60px;
