--- a/src/blocks/single-airdatepicker/single-airdatepicker.scss
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.scss
@@ -5,42 +5,55 @@
 //   justify-content: space-between;
 // }
 
-.arrow__wrapper {
-  position: relative;
-  display: inline-block;
-}
-.arrow__wrapper::before {
-  position: absolute;
-  top: 25%;
-  left: 80%;
-  content: "";
-  padding: 5px;
-  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
-  display: inline-block;
-  transform: rotate(-45deg);
-  margin-left: 10px;
-  color: rgba(31, 32, 65, 0.5);
-}
+// .arrow__wrapper {
+//   position: relative;
+//   display: inline-block;
+// }
+// .arrow__wrapper::before {
+//   position: absolute;
+//   top: 25%;
+//   left: 80%;
+//   content: "";
+//   padding: 5px;
+//   box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+//   display: inline-block;
+//   transform: rotate(-45deg);
+//   margin-left: 10px;
+//   color: rgba(31, 32, 65, 0.5);
+// }
 
 .single-datepicker {
   position: relative;
   display: inline-block;
+  &::before {
+    margin-top: 5px;
+    position: absolute;
+    top: 30%;
+    left: 87%;
+    content: "";
+    padding: 5px;
+    box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+    display: inline-block;
+    transform: rotate(-45deg);
+    margin-left: 10px;
+    color: rgba(31, 32, 65, 0.5);
+  }
 }
-.single-datepicker::before {
-  margin-top: 5px;
-  position: absolute;
-  top: 30%;
-  left: 87%;
-  content: "";
-  padding: 5px;
-  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
-  display: inline-block;
-  transform: rotate(-45deg);
-  margin-left: 10px;
-  color: rgba(31, 32, 65, 0.5);
-}
+// .single-datepicker::before {
+//   margin-top: 5px;
+//   position: absolute;
+//   top: 30%;
+//   left: 87%;
+//   content: "";
+//   padding: 5px;
+//   box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+//   display: inline-block;
+//   transform: rotate(-45deg);
+//   margin-left: 10px;
+//   color: rgba(31, 32, 65, 0.5);
+// }
 
-#single__input__range {
+#single-range {
   width: 395px;
   height: 65px;
   border: 1px solid rgba(31, 32, 65, 0.25);
@@ -50,24 +63,24 @@
   padding-left: 20px;
 }
 
-.range {
-  width: 220px;
-  height: 65px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  outline: none;
-  border: none;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  padding-left: 20px;
-  &::placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1rem;
-    line-height: 18px;
-    color: rgba(31, 32, 65, 0.5);
-    color: rgba(31, 32, 65, 0.75);
-  }
-}
+// .range {
+//   width: 220px;
+//   height: 65px;
+//   border-radius: 4px;
+//   margin-bottom: 30px;
+//   outline: none;
+//   border: none;
+//   border: 1px solid rgba(31, 32, 65, 0.25);
+//   padding-left: 20px;
+//   &::placeholder {
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 1rem;
+//     line-height: 18px;
+//     color: rgba(31, 32, 65, 0.5);
+//     color: rgba(31, 32, 65, 0.75);
+//   }
+// }
 
 //add styles for range
 .datepicker--cell.-range-from-.-selected-::after {
