--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -4,34 +4,10 @@
       flex-direction: row;
       margin-left: -15px;
       margin-top: 30px;
-      // & img {
-      //   width: 120px;
-      //   height: 120px;
-      // }
-      // & h4 {
-      //   margin-block-start: 1em;
-      //   margin-block-end: 0.4em;
-      //   font-size: 21px;
-      //   font-weight: bold;
-      // }
-      // & p {
-      //   margin-block-start: 0em;
-      //   margin-block-end: 0em;
-      //   font-size: 20px;
-      //   font-weight: 300;
-      //   color: rgba(31, 32, 65, 0.75);
-      // }
     }
     &__evaluation {
       display: flex;
       margin-top: -24px;
-      // & p {
-      //   margin-left: 27px;
-      //   margin-top: 2px;
-      //   font-weight: 500;
-      //   line-height: 36px;
-      //   color: rgba(31, 32, 65, 0.75);
-      // }
     }
     &__text {
       margin-left: 20px;
@@ -96,14 +72,15 @@
       &__evaluation {
         display: flex;
         margin-top: -24px;
-        & p {
-          margin-left: 27px;
-          margin-top: -2px;
-          font-size: 16px;
-          font-weight: 500;
-          line-height: 32px;
-        }
-        & button {
+        & > .evaluation{
+          &__text{
+            margin-left: 27px;
+            margin-top: -2px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 32px;
+          }
+        &__button {
           width: 70px;
           height: 27px;
           background: #ffffff;
@@ -113,25 +90,25 @@
           outline: none;
           color: rgba(31, 32, 65, 0.25);
           margin-left: 17px;
-          & span {
+          &__quantity {
             margin-left: 5px;
           }
           &:hover {
             color: #bc9cff;
             transform: scale(1.2);
             border-color: #bc9cff;
-            span {
-              opacity: 1;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 10px;
-              line-height: 12px;
-              padding-top: 5px;
-            }
+            // span {
+            //   opacity: 1;
+            //   font-style: normal;
+            //   font-weight: normal;
+            //   font-size: 10px;
+            //   line-height: 12px;
+            //   padding-top: 5px;
+            // }
           }
         }
       }
-    }
+    }}
 
     .person{
       &__photo {
