--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -35,5 +35,5 @@ mixin form-register(title, birthday,  data, offer, button, login)
         button(type='button' class='btn btn-confirm signup__button_payment')= button
         
         .row
-          p(class='text sugnup__text')= login
+          p(class='text signup__text')= login
           +button-signin('Войти', 'signin-page.html')
