--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -93,8 +93,8 @@ hr {
   color: #ffffff;
   background-image: url(../images/white-arrow.svg);
   background-repeat: no-repeat;
-  background-position-x: 22em;
-  background-position-y: 1.2em;
+  background-position-x: 24rem;
+  background-position-y: 1.2rem;
   top: 20px;
   &:focus {
     outline: none;
@@ -187,7 +187,7 @@ hr {
   }
 
   .btn-confirm {
-    width: 390px;
+    width: 300px;
   }
 }
 
