--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -1,85 +1,86 @@
-.room-feedback{
+.room-feedback {
+  &__person {
+    display: flex;
+    flex-direction: row;
+    // margin-left: -15px;
+    margin-top: 30px;
+  }
+  &__evaluation {
+    // display: flex;
+    // justify-content: space-between;
+    & > .evaluation__text {
+      // display: inline-block;
+      margin-left: 20px;
+      margin-top: 0;
+    }
+  }
+}
+
+
+.evaluation__text {
+  margin-left: 40px;
+  margin-top: 0px;
+}
+.person {
+  display: flex;
+  flex-direction: row;
+  margin-left: -15px;
+  margin-top: 30px;
+  &__photo {
+    width: 120px;
+    height: 120px;
+  }
+  &__name {
+    margin-block-start: 1em;
+    margin-block-end: 0.4em;
+    font-size: 21px;
+    font-weight: bold;
+  }
+  &__date {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    font-size: 20px;
+    font-weight: 300;
+    color: rgba(31, 32, 65, 0.75);
+  }
+}
+// .room-feedback__text {
+//   margin-left: 20px;
+// }
+
+// .btn-like {
+//   border: 2px solid rgba(31, 32, 65, 0.25);
+//   outline: none;
+//   color: rgba(31, 32, 65, 0.25);
+//   background: #ffffff;
+//   border-radius: 15px;
+//   font-size: 14px;
+//   cursor: pointer;
+//   width: 90px;
+//   height: 30px;
+//   margin-left: 20px;
+//   margin-top: 5px;
+// }
+
+@media only screen and (max-width: 600px) {
+  .room-feedback {
     &__person {
       display: flex;
       flex-direction: row;
       margin-left: -15px;
-      margin-top: 30px;
+      margin-top: -7px;
     }
     &__evaluation {
       display: flex;
       margin-top: -24px;
-    }
-    &__text {
-      margin-left: 20px;
-    }  
-  }
-
-  .person {
-    display: flex;
-    flex-direction: row;
-    margin-left: -15px;
-    margin-top: 30px;
-    &__photo {
-      width: 120px;
-      height: 120px;
-    }
-    &__name {
-      margin-block-start: 1em;
-      margin-block-end: 0.4em;
-      font-size: 21px;
-      font-weight: bold;
-    }
-    &__date {
-      margin-block-start: 0em;
-      margin-block-end: 0em;
-      font-size: 20px;
-      font-weight: 300;
-      color: rgba(31, 32, 65, 0.75);
-    }
-  }
-  // .room-feedback__text {
-  //   margin-left: 20px;
-  // }
-  
-  
-  .btn-like {
-    border: 2px solid rgba(31, 32, 65, 0.25);
-    outline: none;
-    color: rgba(31, 32, 65, 0.25);
-    background: #ffffff;
-    border-radius: 15px;
-    font-size: 14px;
-    cursor: pointer;
-    width: 90px;
-    height: 30px;
-    margin-left: 20px;
-    margin-top: 5px;
-  }
-  
-  .btn-like span {
-    margin-left: 5px;
-  }
-  
-  
-  @media only screen and (max-width: 600px) {
-    .room-feedback {
-      &__person {
-        display: flex;
-        flex-direction: row;
-        margin-left: -15px;
-        margin-top: -7px;
-      }
-      &__evaluation {
-        display: flex;
-        margin-top: -24px;
-        & > .evaluation{
-          &__text{
-            margin-left: 27px;
-            margin-top: -2px;
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 32px;
-          }
+      & > .evaluation {
+        &__text {
+          margin-left: 27px;
+          margin-top: -2px;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 32px;
+        }
         &__button {
           width: 70px;
           height: 27px;
@@ -108,28 +109,27 @@
           }
         }
       }
-    }}
-
-    .person{
-      &__photo {
-        width: 120px;
-        height: 120px;
-      }
-      &__name {
-        margin-block-start: 1em;
-        margin-block-end: 0.4em;
-        font-size: 17px;
-        font-weight: bold;
-        margin-left: -14px;
-      }
-      &__date {
-        margin-block-start: 0em;
-        margin-block-end: 0em;
-        font-size: 14px;
-        font-weight: 300;
-        margin-left: -14px;
-      }
     }
   }
-  
 
+  .person {
+    &__photo {
+      width: 120px;
+      height: 120px;
+    }
+    &__name {
+      margin-block-start: 1em;
+      margin-block-end: 0.4em;
+      font-size: 17px;
+      font-weight: bold;
+      margin-left: -14px;
+    }
+    &__date {
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+      font-size: 14px;
+      font-weight: 300;
+      margin-left: -14px;
+    }
+  }
+}
