--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -40,6 +40,7 @@
     margin-top: 20px;
     font-size: 19px;
     margin-right: 60px;
+    margin-top: 20px;
   }
   &__offer {
     font-family: Montserrat;
