--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -4,6 +4,7 @@ include ../../blocks/bullet-list/bullet-list.pug
 include ../../blocks/donut-chart/donut-chart.pug
 include ../../blocks/calculator/calculator.pug
 include ../../blocks/dropdown/dropdown.pug
+include ../../blocks/btn-like/btn-like.pug
 
 div(class='information')
     div(class='information__top-part information__gallery')
@@ -29,9 +30,11 @@ div(class='information')
                     +chart-donut('260', 'голосов', 'Великолепно', 'Хорошо', 'Удовлетворительно', 'Разочарован')
             div
                 h3(class='information__title information__title_details') Отзывы посетителей номера
-                +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', '12', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+                +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+                    +btn-like(12)
                 div(class='information__impression_second')
-                    +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', '12', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+                    +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+                        +btn-like(12)
             div(class='flex-row')
                 div(class='information__rules')
                     h3(class='information__title information__title_rules') Правила
